@@ -1,3 +1,7 @@
+2005-09-21  Pablo Arroyo <zioma@linups.org>
+
+	* src/buoh-window.c: Defined minimun width to the comic list treeview.
+
 2005-09-21  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* src/buoh-comic-loader.c: Proxy support
